googlespeech-gateway.yaml
#######################################################
# Text to Speech Gateway
#######################################################
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: texttospeech-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
#######################################################
# Text to Speech Virtual Service Account
#######################################################
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: texttospeech-virtual-service-account
spec:
  hosts:
    - "*"
  gateways:
    - texttospeech-gateway
  http:
    - match:
        - uri:
            prefix: /googlespeech
        - uri:
            prefix: /offers
      route:
        - destination:
            host: texttospeech
            port:
              number: 8080

#---
